<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/events_details_divider_grey"
    android:weightSum="3"><!--@color/events_details_divider_grey-->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/events_details_divider_grey"
        android:layout_above="@+id/et_image_preview_event_desc"
        android:weightSum="2"><!--@color/events_details_divider_grey-->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_image_preview_event_name"
            android:hint="@string/hint_event_name"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/btn_image_preview_create_event"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/ImageDesc_send_comment"
            android:src="@drawable/ic_send_black_24dp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_image_preview_event_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:maxLines="2"
        android:layout_above="@+id/spinner_google_place"
        android:textSize="15dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_google_place"
        android:paddingBottom="5dp"
        android:layout_alignParentBottom="true"
        android:hint="@string/hint_guessing_the_place"/>

</LinearLayout>
