<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dialog_create_event_start_end_margin"
        android:paddingStart="@dimen/dialog_create_event_start_end_margin">

        <TextView
            android:id="@+id/create_event_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/create_new_event"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingEnd="@dimen/dialog_create_event_start_end_margin"
            android:paddingStart="@dimen/dialog_create_event_start_end_margin"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingEnd="@dimen/dialog_create_event_start_end_margin"
            android:paddingStart="@dimen/dialog_create_event_start_end_margin"
            android:text="@string/create" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_create_event_start_end_margin">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/event_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                tools:ignore="ContentDescription,Suspicious0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icn_camera" />
        </android.support.constraint.ConstraintLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_event_name"
            android:hint="@string/hint_event_name"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/tv_event_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:maxLines="1"
            android:textSize="15dp" />

        <!--RelativeLayout
            android:id="@+id/rl_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:text="01/01/17" />

        </RelativeLayout-->


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/starts_at"
                    android:id="@+id/tv_start_time_label" />

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/tv_start_time_label"
                    android:paddingBottom="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="0dp"
                    android:text="8:30" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/rl_start_time">

                <TextView
                    android:id="@+id/tv_end_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingStart="10dp"
                    android:text="@string/ends_at" />

                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/tv_end_time_label"
                    android:paddingBottom="0dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="0dp"
                    android:text="11:00" />

            </RelativeLayout>
        </RelativeLayout>

        <!--LinearLayout
            android:id="@+id/add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icn_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dialog_create_event_start_end_margin"
                android:text="@string/add_cover_photo" />

        </LinearLayout-->

    </LinearLayout>

</LinearLayout>