<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:id="@+id/bottom_linear_layout"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/events_details_divider_grey"
        android:layout_height="50dp" ><!--@color/events_details_divider_grey-->

        <ImageView
            android:id="@+id/add_comment_btn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="center"
            android:contentDescription="@string/ImageDesc_send_comment"
            android:src="@drawable/ic_send_black_24dp" />

        <EditText
            android:id="@+id/et_add_comment"
            android:layout_toStartOf="@+id/add_comment_btn"
            android:layout_toLeftOf="@+id/add_comment_btn"
            android:layout_toEndOf="@+id/comment_photo_divider"
            android:layout_toRightOf="@+id/comment_photo_divider"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/et_comment_bg"
            android:inputType="" />

        <LinearLayout
            android:id="@+id/comment_photo_divider"
            android:layout_toEndOf="@+id/add_photo_comment"
            android:layout_toRightOf="@+id/add_photo_comment"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:background="@android:color/white"
         /><!--@color/events_details_divider_grey-->

        <ImageView
            android:id="@+id/add_photo_comment"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="center"
            android:contentDescription="@string/ImageDesc_add_photo"
            android:src="@drawable/icn_camera" />

    </RelativeLayout>

    <!--event summary-->
    <LinearLayout
        android:id="@+id/event_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/event_start_end_margin"
        android:paddingBottom="@dimen/event_start_end_margin"
        android:background="@color/events_details_divider_grey"
        android:orientation="vertical"><!--colorPrimary-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/event_start_end_margin"
            android:paddingLeft="@dimen/event_start_end_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/event_start_end_margin"
                android:layout_marginRight="@dimen/event_start_end_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/icn_flag"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_event_name"
                    style="@style/TextView_Large_Blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/NoEventTitle"
                    android:textColorLink="@color/colorAccent" />

                <!--RelativeLayout
                        android:id="@+id/ll_like_buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true">-->
                <!--android:padding="10dp"-->

                <TextView
                    android:id="@+id/tv_likes_count"
                    style="@style/TextView_Large_White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="8dp"
                    android:text="87" /><!--android:layout_marginRight="32dp"--><!--android:layout_toStartOf="@+id/dislike_btn_wrapper"-->

                <!--
                android:layout_alignBottom="@+id/dislike_btn"
                android:layout_alignTop="@+id/dislike_btn"
                android:layout_toLeftOf="@+id/dislike_btn"
                android:layout_toStartOf="@+id/dislike_btn"
                android:layout_alignBottom="@+id/dislike_btn"
                android:layout_centerVertical="true"
                android:layout_alignTop="@+id/dislike_btn"
                -->

                <LinearLayout
                    android:id="@+id/like_btn_wrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"><!--android:paddingLeft="90dp"-->

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/like_btn"
                        style="@style/Switch_Like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                    <!--android:checked="true"-->
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dislike_btn_wrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/dislike_btn"
                        style="@style/Switch_DisLike"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <!--/RelativeLayout--> <!--ll_like_buttons-->

            </LinearLayout>

            <TextView
                android:id="@+id/tv_event_desc"
                style="@style/TextView_Mid_Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:text="@string/NoEventDesc" />


            <!--View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:background="@color/events_details_divider_grey" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:background="@color/events_details_divider_grey" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:background="@color/events_details_divider_grey" /-->

            <LinearLayout
                android:id="@+id/layout_demographic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/icn_group"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_total"
                    style="@style/TextView_Mid_Blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/SampleTxt_PopulationDemogrpahic" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_female_count"
                        style="@style/TextView_Mid_Blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:text="@string/SampleTxt_PercentageFemale" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/ImageDesc_females_percentage"
                        android:src="@drawable/icn_female_s" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_male_count"
                        style="@style/TextView_Mid_Blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:text="@string/SampleTxt_PercentageMale" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/ImageDesc_males_percentage"
                        android:src="@drawable/icn_male_s" />

                </LinearLayout>

                <!--RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/ImageDesc_event_time"
                        android:src="@drawable/icn_time" />

                    <TextView
                        android:id="@+id/tv_event_time"
                        style="@style/TextView_Large_Blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/imageView2"
                        android:gravity="center_vertical"
                        android:text="@string/SampleTxt_event_time" />


                </RelativeLayout-->
            </LinearLayout>
        </LinearLayout><!--vertical-->

    </LinearLayout>

    <!--event comments-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/comments_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="false"
        android:layout_below="@+id/event_summary"
        android:layout_above="@+id/bottom_linear_layout"
        android:scrollbars="vertical" />

</RelativeLayout>